# RecommenderSystem

./: README.md  pyproject.toml  requirements.txt  run_scenarios_report.sh
config/: scenarios.yaml  simulation.yaml
data/: DATA_SOURCES.md
data/enrichment/: hotspot_rankings.yaml  manual_pois.yaml  poi_overrides.yaml
data/processed/: batch_results.csv  pois_simulation.csv
data/raw/: opendatabcn_pics-csv.csv
docs/: REPORT_TABLES.md
report/baseline/: table3.csv
report/budget_backpacker/: table3.csv
report/crowd_averse/: table3.csv
report/family_with_kids/: table3.csv
report/overtourism_peak/: table3.csv
report/sustainability_mission/: table3.csv
scripts/: build_data.py  launch_viz.py  plot_batch_results.py  run_all_reports.py  run_batch.py  run_case_study.py  run_scenario.py  summarize_batch_results.py
src/: __init__.py  config.py  models.py  scenarios.py
src/data/: enrich_pois.py  filter_pois.py  intensity.py  load_pics.py  pipeline.py  pricing.py  tagging.py
src/metrics/: __init__.py  crowding.py  recommendation_quality.py
src/recommenders/: __init__.py  base.py  filters.py  interest_based.py  popularity.py  registry.py  sustainability.py  trip_profile.py
src/simulation/: __init__.py  agents.py  geo.py  model.py  population.py  visit_logic.py
src/viz/: __init__.py  app.py  help_text.py  insights.py  map_figure.py  profile_help.py  (+4 more)
tests/: test_filter.py  test_load_pics.py  test_pricing.py  test_profile_help.py  test_recommenders.py  test_scenarios.py  test_simulation.py  test_snapshot.py  test_trip_profile.py  test_user_profile.py
